Working on murdering, relations and births

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body lang="en">
     <canvas id="scene"></canvas>
+    <script src="/js/names.js"></script>
+    <script src="/js/Food.js"></script>
     <script src="/js/Node.js"></script>
     <script src="/js/base.js"></script>
 </body>
