--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body lang="en">
     <canvas id="scene"></canvas>
+    <script src="/js/globals.js"></script>
     <script src="/js/names.js"></script>
+    <script src="/js/professions.js"></script>
     <script src="/js/Food.js"></script>
     <script src="/js/Node.js"></script>
     <script src="/js/base.js"></script>
