They have brains!
At first only to find food...

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="/js/names.js"></script>
     <script src="/js/professions.js"></script>
     <script src="/js/Food.js"></script>
+    <script src="/js/Brain.js"></script>
     <script src="/js/Node.js"></script>
     <script src="/js/base.js"></script>
 </body>
